--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,71 +1,28 @@
-defaults: &defaults
-    environment: 
-      RPMLINT: 1
-    steps: # a set of executable commands
-      - checkout # special step to check out source code to working directory
-      - run:
-          name: "Run the build itself: this will do rpmlint and check RPMs existence among other things."
-          command: build
-      - persist_to_workspace:
-          root: /output
-          paths:
-            - "*.rpm"
+version: 2.1
 
-version: 2 
-jobs: # a collection of steps
-  el6:
-    docker: # run the steps with Docker
-      - image: getpagespeed/rpmbuilder:centos-6
-    working_directory: /sources # directory where steps will run
-    <<: *defaults
-  el7:
-    docker:
-      - image: getpagespeed/rpmbuilder:centos-7
-    working_directory: /sources # directory where steps will run
-    <<: *defaults
-  el8:
-    docker:
-      - image: getpagespeed/rpmbuilder:centos-8
-    working_directory: /sources # directory where steps will run
-    <<: *defaults   
-  deploy:
-    docker:
-      - image: centos:7
-    environment:
-      RPMLINT: 1
-    working_directory: /output
+# this allows you to use CircleCI's dynamic configuration feature
+setup: true
+
+# the continuation orb is required in order to use dynamic configuration
+orbs:
+  continuation: circleci/continuation@0.1.2
+
+# our defined job, and its steps
+jobs:
+  setup:
+    executor: continuation/default
     steps:
-      - attach_workspace:
-          at: /output
-      - add_ssh_keys:
-          fingerprints:
-            - "8c:a4:dd:2c:47:4c:63:aa:90:0b:e0:d6:15:be:87:82"
-      - run:
-          name: "Install stuff to deploy"
-          command: yum -y install openssh-clients
-      - run:
-          name: "Ensure project specific upload directory to avoid deploy collisions"
-          command: ssh -o StrictHostKeyChecking=no $GPS_BUILD_USER@$GPS_BUILD_SERVER "mkdir -p ~/incoming/$CIRCLE_PROJECT_REPONAME"
-      - run:
-          name: "Deploy all RPMs to GetPageSpeed repo."
-          command: scp -o StrictHostKeyChecking=no -q -r *.rpm $GPS_BUILD_USER@$GPS_BUILD_SERVER:~/incoming/$CIRCLE_PROJECT_REPONAME/
-      - run:
-          name: "Trigger Deploy Hook."
-          command: ssh -o StrictHostKeyChecking=no -q $GPS_BUILD_USER@$GPS_BUILD_SERVER "nohup ~/scripts/incoming.sh $CIRCLE_PROJECT_REPONAME > ~/incoming/$CIRCLE_PROJECT_REPONAME/process.log 2>&1&"
+      - checkout # checkout code
+      - run: # run a command
+          name: Generate config
+          command: |
+            curl "https://raw.githubusercontent.com/GetPageSpeed/buildstrap/main/generated_config.yml" -o .circleci/generated_config.yml
+            cat .circleci/generated_config.yml
+      - continuation/continue:
+          configuration_path: .circleci/generated_config.yml # use newly generated config to continue
+
+# our single workflow, that triggers the setup job defined above
 workflows:
-  version: 2
-  build-deploy:
+  setup:
     jobs:
-      #- el6
-      - el7
-      - el8:
-          context: org-global
-      - deploy:
-          context: org-global
-          requires:
-            #- el6
-            - el7
-            - el8
-          filters:
-            branches:
-              only: master
+      - setup
